# pomo-tui

./: .env.example  .gitignore  CLAUDE.md  COMPLETION_REPORT.md  Cargo.toml  Cargo.toml.full  Cargo_minimal.toml  LICENSE  README.md  README_OLD.md  SECURITY.md  VALIDATION_CHECKLIST.md  install.sh  setup-homebrew-tap.md
.github/workflows/: ci.yml  release.yml
config/: blocked-websites.txt  default.toml
config/examples/: adhd-optimized.toml  deep-work.toml  minimal.toml  traditional-pomodoro.toml
config/launchd/: com.pomo-tui.agent.plist
config/systemd/: pomo-tui.service
docs/: integrations.md  user-guide.md
homebrew/: pomo-tui.rb
homebrew-tap/: README.md
homebrew-tap/.github/workflows/: test.yml
homebrew-tap/Formula/: pomo-tui.rb
migrations/: 001_initial_schema.sql  002_fix_schema_alignment.sql
specs/001-build-a-terminal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-terminal/contracts/: cli-api.yaml
src/: lib.rs  main.rs
src/audio/: config.rs  mod.rs  player.rs  sounds.rs  types.rs
src/core/: break_activity.rs  breathing.rs  mod.rs  timer.rs
src/integrations/: macos_dnd.rs  mod.rs
src/tui/: app.rs  input.rs  ui.rs
tests/: contract_tests.rs  integration_tests.rs  verify_contracts.rs
tests/contract/: break_api.rs  export_api.rs  mod.rs  preferences_api.rs  session_api.rs  statistics_api.rs  task_api.rs
tests/e2e/: export.rs  mod.rs  persistence.rs  pomodoro_cycle.rs
tests/integration/: break_scheduling_test.rs  database_test.rs  full_stack.rs  mod.rs  session_state_test.rs  timer_test.rs
tests/unit/: data_validators.rs  mod.rs  state_machines.rs  timer_precision.rs
